--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,13 +2,14 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
+    "module": "commonjs",
     "types": [
-      "jasmine",
+      "jest",
       "node"
-    ]
+    ],
+    "allowJs": true
   },
   "files": [
-    "test.ts",
     "polyfills.ts"
   ],
   "include": [
